--- a/src/oodj_assignment/Add_item_GUI.form
+++ b/src/oodj_assignment/Add_item_GUI.form
@@ -179,7 +179,8 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CategoryActionPerformed"/>
       </Events>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox&lt;&gt;()"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Item.Category&gt;"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="Item_name">
